student_app/force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <label>Admission</label>
    <nameField>
        <displayFormat>ADM-{00000}</displayFormat>
        <label>Admission ID</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>