student_app/force-app/main/default/objects/Admission__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <label>Admission Date</label>
    <type>Date</type>
    <required>true</required>








</CustomField>