student_app/force-app/main/default/objects/Admission__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Lookup</type>
    <required>true</required>





    <referenceTo>Course__c</referenceTo>
    <relationshipName>Admissions</relationshipName>
    <relationshipLabel>Admissions</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>


</CustomField>