student_app/force-app/main/default/objects/Admission__c/fields/Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Number__c</fullName>
    <label>Enrollment Number</label>
    <type>Text</type>
    <unique>true</unique>
    <length>20</length>






</CustomField>