student_app/force-app/main/default/objects/Admission__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <label>Fees Paid</label>
    <type>Checkbox</type>






    <defaultValue>false</defaultValue>



</CustomField>