student_app/force-app/main/default/objects/Admission__c/fields/Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Student_Application__c</fullName>
    <label>Student Application</label>
    <type>Lookup</type>
    <required>true</required>





    <referenceTo>Student_Application__c</referenceTo>
    <relationshipName>Admissions</relationshipName>
    <relationshipLabel>Admissions</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>


</CustomField>