student_app/force-app/main/default/objects/Admission__c/fields/Student_Application_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Student_Application_Unique_Key__c</fullName>
    <label>Student Application Unique Key</label>
    <type>Text</type>
    <unique>true</unique>
    <length>255</length>






</CustomField>