student_app/force-app/main/default/objects/Admission__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <type>Text</type>







    <formula>Student_Application__r.First_Name__c & ' ' & Student_Application__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>